#29 - Move wrapping URL for post outside of the content to avoid nested link issues and flip bold/normal styling of remaining content.

--- a/wwwroot/static/css/modules/tweets.scss
+++ b/wwwroot/static/css/modules/tweets.scss
@@ -92,9 +92,10 @@
 
 .tweet__content {
   margin-top: 1rem;
+  font-weight: normal;
 
   a {
-    font-weight: normal;
+    font-weight: bold;
     color: $grey;
     word-break: break-word;
     text-decoration: none;
